# microML

./: .gitignore  README.md  pyproject.toml
microML/: __init__.py  common.py  main.py  settings.py  spatial.py
microML/.pt_tmp/: exp_version_manager.yml
microML/analysis/: explore.py  feature_selection.py  process.py
microML/dataset/: augment.py  collect.py  compile.py  make.py
microML/lightning_logs/version_0/: events.out.tfevents.1731802740.Mohammads-Mac-Pro.local.86940.0  events.out.tfevents.1731802757.Mohammads-Mac-Pro.local.86940.1  events.out.tfevents.1731803273.Mohammads-Mac-Pro.local.86940.2
microML/lightning_logs/version_1/: events.out.tfevents.1731806800.carson.76855.0  events.out.tfevents.1731806805.carson.76855.1  events.out.tfevents.1731806896.carson.76855.2
microML/model/: ml.py  pyt.py  skl.py  tab.py  tfl.py  xgb.py
microML/saved_models/: regression-58_epoch=4-valid_loss=0.28.ckpt  regression-59_epoch=1-valid_loss=0.48.ckpt
