[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "microML"
version = "0.1.0"
authors = [
    {name = "Mohammad Ashkezari", email = "mdehghan@uw.edu"},
]
description = "ML model to estimate spatiotemporal patterns of marine microbes, especially cyanobacteria"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["marine microbe", "ML", "cyanobacteria"]
dependencies = [
    "numpy<2.0.0",
    "pandas",
    "scipy",
    "cartopy",
    "pycmap",
    "torch",
    "scikit-learn",
    "tqdm",
    "colorama",
    "sweetviz",
    "seaborn",
    "pytorch_tabular[extra]"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]


[tool.setuptools]
py-modules = ["microML"]


[project.optional-dependencies]
lint = [
  "flake8"
]

[tool.pytest.ini_options]
addopts = "--doctest-modules -W error::UserWarning"
testpaths = ["tests"]
